[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/MainScenes/Multiplayer.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/BleedingPixels.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Images/JoxHeadLogo.png" type="Texture" id=8]
[ext_resource path="res://Resources/Images/BackInactive.png" type="Texture" id=11]
[ext_resource path="res://Resources/Images/BackActive.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[node name="MultiplayerNode" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Panel" type="Panel" parent="."]
margin_left = -32.4126
margin_right = 1404.59
margin_bottom = 768.0
rect_min_size = Vector2( 1368, 768 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Test" type="Button" parent="."]
margin_left = 232.135
margin_top = 116.089
margin_right = 393.138
margin_bottom = 136.089
text = "feafaefaefaefaefea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoRect" type="TextureRect" parent="."]
margin_left = 280.0
margin_top = 45.0
margin_right = 1042.0
margin_bottom = 152.0
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mpBackButton" type="TextureButton" parent="."]
margin_left = 600.0
margin_top = 655.362
margin_right = 714.0
margin_bottom = 709.362
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyContainer" type="Panel" parent="."]
margin_left = 450.0
margin_top = 166.0
margin_right = 890.0
margin_bottom = 606.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyLabel" type="Label" parent="LobbyContainer"]
margin_left = 186.203
margin_top = 317.416
margin_right = 256.203
margin_bottom = 343.416
custom_fonts/font = SubResource( 2 )
text = "- OR -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyScroll" type="ScrollContainer" parent="LobbyContainer"]
margin_left = 21.0
margin_top = 65.0
margin_right = 421.0
margin_bottom = 295.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomContainer" type="VBoxContainer" parent="LobbyContainer/LobbyScroll"]
margin_right = 400.0
margin_bottom = 230.0
rect_min_size = Vector2( 400, 230 )

[node name="OrLabel" type="Label" parent="LobbyContainer"]
margin_left = 179.529
margin_top = 20.6742
margin_right = 255.529
margin_bottom = 46.6742
custom_fonts/font = SubResource( 2 )
text = "Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateRoomBtn" type="Button" parent="LobbyContainer"]
margin_left = 117.692
margin_top = 364.099
margin_right = 327.692
margin_bottom = 401.099
custom_fonts/font = SubResource( 3 )
text = "Create Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateContainer" type="Panel" parent="."]
visible = false
margin_left = 450.0
margin_top = 167.0
margin_right = 890.0
margin_bottom = 604.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rmNameLabel" type="Label" parent="CreateContainer"]
margin_left = 140.158
margin_top = 156.176
margin_right = 294.158
margin_bottom = 182.176
custom_fonts/font = SubResource( 4 )
text = "Room Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rmNameInput" type="TextEdit" parent="CreateContainer"]
margin_left = 107.977
margin_top = 211.33
margin_right = 333.977
margin_bottom = 251.33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateRoom2Btn" type="Button" parent="CreateContainer"]
margin_left = 119.027
margin_top = 307.112
margin_right = 329.027
margin_bottom = 344.112
custom_fonts/font = SubResource( 3 )
text = "Create Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="errLabel" type="Label" parent="CreateContainer"]
margin_left = 111.005
margin_top = 274.0
margin_right = 339.005
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Test" to="." method="_on_Test_pressed"]
[connection signal="pressed" from="mpBackButton" to="." method="_on_mpBackButton_pressed"]
[connection signal="pressed" from="LobbyContainer/CreateRoomBtn" to="." method="_on_CreateRoomBtn_pressed"]
[connection signal="pressed" from="CreateContainer/CreateRoom2Btn" to="." method="_on_CreateRoom2Btn_pressed"]
